# serializer version: 1
# name: test_doc_needextend_dynamic[test_app0]
  dict({
    'current_version': '',
    'versions': dict({
      '': dict({
        'needs': dict({
          'REQ_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 4,
            'links': list([
              'REQ_A_1',
              'REQ_D_1',
              'REQ_B_1',
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Requirement 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_A_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_A_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 7,
            'links': list([
            ]),
            'links_back': list([
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Requirement A 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_B_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_B_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 10,
            'links': list([
            ]),
            'links_back': list([
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Requirement B 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_C_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_C_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 13,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Requirement C 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_D_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_D_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 16,
            'links': list([
            ]),
            'links_back': list([
              'REQ_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'Requirement D 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_E_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_E_1',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 19,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'other appended',
            'style': None,
            'tags': list([
              'other',
              'appended',
            ]),
            'template': None,
            'title': 'Requirement E 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_E_2': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_E_2',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 24,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'REQ_E_2 appended',
            'style': None,
            'tags': list([
              'REQ_E_2',
              'appended',
            ]),
            'template': None,
            'title': 'Requirement E 2',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_E_3': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_E_3',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 29,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'open REQ_E_3',
            'style': None,
            'tags': list([
              'other',
              'REQ_E_3',
            ]),
            'template': None,
            'title': 'Requirement E 3',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 8,
        'needs_schema': dict({
          '$schema': 'http://json-schema.org/draft-07/schema#',
          'properties': dict({
            'arch': dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'default': dict({
              }),
              'description': 'Mapping of uml key to uml content.',
              'field_type': 'core',
              'type': 'object',
            }),
            'avatar': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'closed_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'completion': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'constraints': dict({
              'default': list([
              ]),
              'description': 'List of constraint names, which are defined for this need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'constraints_error': dict({
              'default': None,
              'description': 'An error message set if any constraint failed, and `error_message` field is set in config.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'constraints_passed': dict({
              'default': True,
              'description': 'True if all constraints passed, False if any failed, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'boolean',
                'null',
              ]),
            }),
            'constraints_results': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': 'Mapping of constraint name, to check name, to result, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'object',
                'null',
              ]),
            }),
            'content': dict({
              'default': '',
              'description': 'The main content of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'created_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'docname': dict({
              'default': None,
              'description': 'Name of the document where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'doctype': dict({
              'default': '.rst',
              'description': "The markup type of the content, denoted by the suffix of the source file, e.g. '.rst'.",
              'field_type': 'core',
              'type': 'string',
            }),
            'duration': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'external_css': dict({
              'default': '',
              'description': 'CSS class name, added to the external reference.',
              'field_type': 'core',
              'type': 'string',
            }),
            'external_url': dict({
              'default': None,
              'description': 'URL of the need, if it is an external need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'has_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'has_forbidden_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list, and the link type does not allow dead links.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'id': dict({
              'description': 'ID of the data.',
              'field_type': 'core',
              'type': 'string',
            }),
            'id_prefix': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'is_external': dict({
              'default': False,
              'description': 'If true, no node is created and need is referencing external url.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_import': dict({
              'default': False,
              'description': 'If true, the need was derived from an import.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_modified': dict({
              'default': False,
              'description': 'Whether the need was modified by needextend.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'jinja_content': dict({
              'default': False,
              'description': 'Whether the content was pre-processed by jinja.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'layout': dict({
              'default': None,
              'description': 'Key of the layout, which is used to render the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'lineno': dict({
              'default': None,
              'description': 'Line number where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'integer',
                'null',
              ]),
            }),
            'links': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'links_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'max_amount': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'max_content_lines': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'modifications': dict({
              'default': 0,
              'description': 'Number of modifications by needextend.',
              'field_type': 'core',
              'type': 'integer',
            }),
            'params': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'parent_need': dict({
              'default': None,
              'description': 'Simply the first parent id.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'parent_needs': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parent_needs_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parts': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': "Mapping of parts, a.k.a. sub-needs, IDs to data that overrides the need's data",
              'field_type': 'core',
              'type': 'object',
            }),
            'post_content': dict({
              'default': None,
              'description': 'Additional content after the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'post_template': dict({
              'default': None,
              'description': 'The template key, if the post_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_content': dict({
              'default': None,
              'description': 'Additional content before the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_template': dict({
              'default': None,
              'description': 'The template key, if the pre_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'prefix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'query': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'section_name': dict({
              'default': None,
              'description': 'Simply the first section.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'sections': dict({
              'default': list([
              ]),
              'description': 'Sections of the need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'service': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'signature': dict({
              'default': None,
              'description': 'Derived from a docutils desc_name node.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'specific': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'status': dict({
              'default': None,
              'description': 'Status of the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'style': dict({
              'default': None,
              'description': 'Comma-separated list of CSS classes (all appended by `needs_style_`).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'tags': dict({
              'default': list([
              ]),
              'description': 'List of tags.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'template': dict({
              'default': None,
              'description': 'The template key, if the content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'title': dict({
              'description': 'Title of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type': dict({
              'default': '',
              'description': 'Type of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type_name': dict({
              'default': '',
              'description': 'Name of the type.',
              'field_type': 'core',
              'type': 'string',
            }),
            'updated_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url_postfix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'user': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
          }),
          'type': 'object',
        }),
      }),
    }),
  })
# ---
# name: test_doc_needextend_html[test_app0]
  dict({
    'current_version': '',
    'versions': dict({
      '': dict({
        'needs': dict({
          'extend_test_003': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '''
              Had no outgoing links.
              Got an outgoing link ``extend_test_004``.
            ''',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_003',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 9,
            'links': list([
              'extend_test_004',
            ]),
            'links_back': list([
              'extend_test_006',
              'extend_test_007',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'needextend Example 3',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_004': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '''
              Had no links.
              Got an incoming links ``extend_test_003`` and ``extend_test_006``.
            ''',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_004',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': False,
            'jinja_content': False,
            'layout': None,
            'lineno': 15,
            'links': list([
            ]),
            'links_back': list([
              'extend_test_003',
              'extend_test_006',
              'extend_test_007',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'needextend Example 4',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_005': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '''
              Had the two links: ``extend_test_003`` and ``extend_test_004``.
              Both got deleted.
            ''',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_005',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 21,
            'links': list([
            ]),
            'links_back': list([
              'extend_test_007',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'needextend Example 5',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_006': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': 'Had the link ``extend_test_003``, got another one ``extend_test_004``.',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_006',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 28,
            'links': list([
              'extend_test_003',
              'extend_test_004',
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'needextend Example 6',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_007': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_007',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 34,
            'links': list([
              'extend_test_003',
              'extend_test_004',
              'extend_test_005',
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'template': None,
            'title': 'needextend Example 7',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_page': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': None,
            'constraints': list([
            ]),
            'constraints_error': None,
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'content': '',
            'created_at': '',
            'docname': 'page_1',
            'doctype': '.rst',
            'duration': None,
            'external_css': 'external_link',
            'external_url': None,
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_page',
            'id_prefix': '',
            'is_external': False,
            'is_import': False,
            'is_modified': True,
            'jinja_content': False,
            'layout': None,
            'lineno': 5,
            'links': list([
            ]),
            'links_back': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': None,
            'parent_needs': list([
            ]),
            'parent_needs_back': list([
            ]),
            'parts': dict({
            }),
            'post_content': None,
            'post_template': None,
            'pre_content': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'need objects',
            'sections': list([
              'need objects',
            ]),
            'service': '',
            'signature': None,
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
              'tag_1',
              'new_tag',
              'another_tag',
            ]),
            'template': None,
            'title': 'needextend different pages test',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
        'needs_schema': dict({
          '$schema': 'http://json-schema.org/draft-07/schema#',
          'properties': dict({
            'arch': dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'default': dict({
              }),
              'description': 'Mapping of uml key to uml content.',
              'field_type': 'core',
              'type': 'object',
            }),
            'avatar': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'closed_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'completion': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'constraints': dict({
              'default': list([
              ]),
              'description': 'List of constraint names, which are defined for this need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'constraints_error': dict({
              'default': None,
              'description': 'An error message set if any constraint failed, and `error_message` field is set in config.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'constraints_passed': dict({
              'default': True,
              'description': 'True if all constraints passed, False if any failed, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'boolean',
                'null',
              ]),
            }),
            'constraints_results': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': 'Mapping of constraint name, to check name, to result, None if not yet checked.',
              'field_type': 'core',
              'type': list([
                'object',
                'null',
              ]),
            }),
            'content': dict({
              'default': '',
              'description': 'The main content of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'created_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'docname': dict({
              'default': None,
              'description': 'Name of the document where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'doctype': dict({
              'default': '.rst',
              'description': "The markup type of the content, denoted by the suffix of the source file, e.g. '.rst'.",
              'field_type': 'core',
              'type': 'string',
            }),
            'duration': dict({
              'default': None,
              'description': 'Added for needgantt functionality',
              'field_type': 'extra',
              'type': 'integer',
            }),
            'external_css': dict({
              'default': '',
              'description': 'CSS class name, added to the external reference.',
              'field_type': 'core',
              'type': 'string',
            }),
            'external_url': dict({
              'default': None,
              'description': 'URL of the need, if it is an external need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'has_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'has_forbidden_dead_links': dict({
              'default': False,
              'description': 'True if any links reference need ids that are not found in the need list, and the link type does not allow dead links.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'id': dict({
              'description': 'ID of the data.',
              'field_type': 'core',
              'type': 'string',
            }),
            'id_prefix': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'is_external': dict({
              'default': False,
              'description': 'If true, no node is created and need is referencing external url.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_import': dict({
              'default': False,
              'description': 'If true, the need was derived from an import.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'is_modified': dict({
              'default': False,
              'description': 'Whether the need was modified by needextend.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'jinja_content': dict({
              'default': False,
              'description': 'Whether the content was pre-processed by jinja.',
              'field_type': 'core',
              'type': 'boolean',
            }),
            'layout': dict({
              'default': None,
              'description': 'Key of the layout, which is used to render the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'lineno': dict({
              'default': None,
              'description': 'Line number where the need is defined (None if external).',
              'field_type': 'core',
              'type': list([
                'integer',
                'null',
              ]),
            }),
            'links': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'links_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'max_amount': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'max_content_lines': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'modifications': dict({
              'default': 0,
              'description': 'Number of modifications by needextend.',
              'field_type': 'core',
              'type': 'integer',
            }),
            'params': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'parent_need': dict({
              'default': None,
              'description': 'Simply the first parent id.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'parent_needs': dict({
              'default': list([
              ]),
              'description': 'Link field',
              'field_type': 'links',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parent_needs_back': dict({
              'default': list([
              ]),
              'description': 'Backlink field',
              'field_type': 'backlinks',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'parts': dict({
              'additionalProperties': dict({
                'type': 'object',
              }),
              'default': dict({
              }),
              'description': "Mapping of parts, a.k.a. sub-needs, IDs to data that overrides the need's data",
              'field_type': 'core',
              'type': 'object',
            }),
            'post_content': dict({
              'default': None,
              'description': 'Additional content after the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'post_template': dict({
              'default': None,
              'description': 'The template key, if the post_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_content': dict({
              'default': None,
              'description': 'Additional content before the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'pre_template': dict({
              'default': None,
              'description': 'The template key, if the pre_content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'prefix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'query': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'section_name': dict({
              'default': None,
              'description': 'Simply the first section.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'sections': dict({
              'default': list([
              ]),
              'description': 'Sections of the need.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'service': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'signature': dict({
              'default': None,
              'description': 'Derived from a docutils desc_name node.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'specific': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'status': dict({
              'default': None,
              'description': 'Status of the need.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'style': dict({
              'default': None,
              'description': 'Comma-separated list of CSS classes (all appended by `needs_style_`).',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'tags': dict({
              'default': list([
              ]),
              'description': 'List of tags.',
              'field_type': 'core',
              'items': dict({
                'type': 'string',
              }),
              'type': 'array',
            }),
            'template': dict({
              'default': None,
              'description': 'The template key, if the content was created from a jinja template.',
              'field_type': 'core',
              'type': list([
                'string',
                'null',
              ]),
            }),
            'title': dict({
              'description': 'Title of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type': dict({
              'default': '',
              'description': 'Type of the need.',
              'field_type': 'core',
              'type': 'string',
            }),
            'type_name': dict({
              'default': '',
              'description': 'Name of the type.',
              'field_type': 'core',
              'type': 'string',
            }),
            'updated_at': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
            'url_postfix': dict({
              'default': '',
              'description': 'Added by service open-needs',
              'field_type': 'extra',
              'type': 'string',
            }),
            'user': dict({
              'default': '',
              'description': 'Added by service github-issues',
              'field_type': 'extra',
              'type': 'string',
            }),
          }),
          'type': 'object',
        }),
      }),
    }),
  })
# ---
